Bug 296006 - Replacement of ç not so good
Summary: Replacement of ç not so good
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: editor (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-14 17:00 UTC by Olivier Delaune
Modified: 2013-03-06 01:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Delaune 2012-03-14 17:00:16 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

Hello, I use actually kile 2.1.1 with KDE 4.6.5. I write in French and so I use option to replace automatically "special" letters like é, è, à, ... by \'e, \`e, \`a, ... It works fine for most of them but I dound a problem with the letter "ç". Indeed, kile replace ç by \cc. Problem happens "ç" is in the middle of a word. For example, leçon will be replace by le\ccon and thus \ccon will interpreted as a LaTeX command. It would be fine if kile replaces "ç" by \c{c}.
Thanks

Reproducible: Always
Comment 1 Michel Ludwig 2012-03-17 21:54:11 UTC
Git commit 4e5b2ea133ed1e625085b409dc3fc86ac6e98964 by Michel Ludwig.
Committed on 17/03/2012 at 22:47.
Pushed by mludwig into branch 'master'.

Correctly insert '\c{c}' for the cedilla character
Related: bug 289529

M  +5    -3    src/editorextension.cpp
M  +36   -35   src/eventfilter.cpp

http://commits.kde.org/kile/4e5b2ea133ed1e625085b409dc3fc86ac6e98964
Comment 2 Michel Ludwig 2012-03-17 22:32:53 UTC
Git commit 7b9052a565c078c60d1e5fdf18a4add0a409b4d3 by Michel Ludwig.
Committed on 17/03/2012 at 22:47.
Pushed by mludwig into branch '2.1'.

Correctly insert '\c{c}' for the cedilla character
Related: bug 289529

M  +5    -3    src/editorextension.cpp
M  +36   -35   src/eventfilter.cpp

http://commits.kde.org/kile/7b9052a565c078c60d1e5fdf18a4add0a409b4d3