Correctly insert '\c{c}' for the cedilla character

BUG: 296006
BUG: 289529